--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ModelKitContext": "Data Source=ModelKit.db"
+    "ModelKitContext": "Data Source=ModelKit.db",
+    "ModelMakerContext": "Data Source=ModelMakerContext-5ba82039-b205-49ab-bd29-0e878905f712.db"
   }
 }
